<resources>
    <string name="app_name">JepongDevxyz VPN</string>
    <string name="custom_payload_msg">Please enable custom payload to generate</string>
    <string name="locked_msg">Configuration locked</string>
    <string name="dash_sign">-</string>
    <string name="default_payload">CONNECT [host_port] [protocol][crlf][crlf]</string>
    <string name="remote_proxy">Remote Proxy</string>
    <string name="censored_string">********</string>
    <string name="sni_title">Server Name Indication (SNI)</string>
    <string name="current_dns">DNS (%1$s)</string>
    <string name="ssh_title">Secure Shell (SSH)</string>
    <string name="v2ray_xray">V2Ray</string>
    <string name="hysteria">Hysteria</string>
    <string name="dns_dnstt">DNS (DNSTT)</string>
    <string name="info1">Zen Injector is a professional VPN tool for private and secure internet browsing with multiple built-in protocol technologies and tunnels in a single application.</string>
    <string name="info2">It works as a universal SSH, Proxy, SSL, DNS Tunnel, Hysteria, V2Ray client to encrypt your connection so you can browse the internet privately and securely.</string>
    <string name="operator_checkbox_tittle">Block Carrier</string>
    <string name="block_hwid_tittle">Invalid HWID, The Server Is Blocked By HWID\nContact your distributor for another server</string>
    <string name="block_only_data_movile">Configuration locked for WiFi, please enable Mobile Data</string>
    <string name="only_play_store_instalation">This Server Only Allows Installation from Play Store</string>
    <string name="only_play_store">Only PlayStore</string>
    <string name="operator_block_tittle">Carrier Block Active, Your Carrier is Different From The One Set on the Server</string>
    <string name="info3">It also helps you access blocked websites behind a firewall. Best part? You will be able to configure your own server and connect using this application.</string>
    <string name="block_hwid_checkbox_tittle">HWID Block</string>
    <string name="tutorial_desc">"Examples, Manuals and Tips:

        Developer:
        https://t.me/AlfSilic

        Telegram Channel:
        https://t.me/AlfSilic
    </string>
    <string name="more_from_us">Developer URL</string>
    <string name="ratetext">We resolved problem(s) successfully.</string>
    <string name="rate_text1">Is that worth a good rating?</string>
    <string name="speed">Speed</string>
    <string name="history">History</string>
    <string name="block_hwid_tittleR">block hwid</string>
    <string name="delete_url_title">Delete url</string>
    <string name="date_format">MM/dd/yyyy HH:mm</string>
    <string name="speedtest">Speed Test</string>
    <string name="value">-</string>
    <string name="upload">UPLOAD</string>
    <string name="download">DOWNLOAD</string>
    <string name="date">Unit</string>
    <string name="mbps">values</string>
    <string name="values">Mbps</string>
    <string name="scale">Scale</string>
    <string name="_100">100</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="share">Share</string>
    <string name="units">MBS</string>
    <string name="connection_name">Connection Name</string>
    <string name="warning">Exit App</string>
    <string name="description_dialogue">Are You Sure You Want to Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you Sure You Want to Exit</string>
    <string name="about">About</string>
    <string name="about1">License</string>
    <string name="actived">Dark mode</string>
    <string name="disabled">Light</string>
    <string name="config">Settings</string>
    <string name="settings">Settings</string>
    <string name="settings_ssh">SSH Settings</string>
    <string name="settings_ssh_title">Secured Shell (SSH)</string>
    <string name="settings_ssh_summary">SSH Settings</string>
    <string name="network_mobile">Network Radio</string>
    <string name="method_connection">Connection Method</string>
    <string name="rate_app">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="category_forward_udp">Udp forwarding</string>
    <string name="title_forward_udp">Forward UDP</string>
    <string name="summary_forward_udp">If active, redirects requests to the remote server. Otherwise, UDP requests will not be resolved.</string>
    <string name="title_resolver_udp">UDP Gateway (Remote)</string>
    <string name="title_dns_secondary">DNS Secondary</string>
    <string name="summary_resolver_udp">Standard (7300)</string>
    <string name="category_forward_dns">DNS Forwarding</string>
    <string name="title_forward_dns">Forward DNS</string>
    <string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
    <string name="title_dns_primary">Primary DNS</string>
    <string name="category_advanced_settings">Advanced Settings</string>
    <string name="title_hide_log">Hide Log on Start</string>
    <string name="summary_hide_log">If active, the log will not be shown automatically.</string>
    <string name="title_auto_clear_log">Automatically clear logs</string>
    <string name="summary_auto_clear_log">If active, logs are cleared automatically.</string>
    <string name="category_forward_port">Port Forwarding</string>
    <string name="title_mode_debug">Debug mode</string>
    <string name="summary_mode_debug">Allows you to see more advanced information in the logs.</string>
    <string name="category_filter_apps">Filter Apps</string>
    <string name="category_settings_adicionais">Additional configurations</string>
    <string name="title_ping_time">Ping (seconds)</string>
    <string name="category_user_interface">User Interface</string>
    <string name="title_language">Language</string>
    <string name="category_tunnel">Tunnel</string>
    <string name="title_number_max_threads">Maximum number of threads</string>
    <string name="summary_number_max_threads">The higher the number of Threads, the higher the power consumption and connection speed of your device.</string>
    <string name="title_mode_vpn">Send Traffic over VPN</string>
    <string name="summary_mode_vpn">If active, all traffic will be sent over the VPN.</string>
    <string name="title_filter_apps">Filter Apps</string>
    <string name="title_bypass_mode">Bypass Mode</string>
    <string name="summary_dns_primary">DNS (8.8.8.8)</string>
    <string name="summary_dns_secondary">DNS (8.8.4.4)</string>
    <string name="summary_bypass_modo">If active, traffic from the selected applications will be sent directly.</string>
    <string name="title_apps_list">Apps List</string>
    <string name="summary_apps_list">Enter a package name per line. See Settings -> Apps for the package name of the apps.</string>
    <string name="title_tethering_subnet">Tethering Subnet (beta)</string>
    <string name="summary_tethering_subnet">Enable it if you have problems sharing Internet from your device.</string>
    <string name="ssh_server">SSH Host</string>
    <string name="ssh_port">SSH Port</string>
    <string name="ssh_porta_local">Local Port (Socks5)</string>
    <string name="payload">Payload:</string>
    <string name="proxy_remote">Remote Proxy</string>
    <string name="squid">HTTP Proxy (eg: Squid)</string>
    <string name="proxy_ip">Proxy IP/Host</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_auth">Proxy Authentication</string>
    <string name="proxy_user">Username</string>
    <string name="proxy_pass">Password</string>
    <string name="dir_name">Folder</string>
    <string name="alert_exit">Do you want to exit or minimize?</string>
    <string name="alert_clear_settings">Are you sure you want to restore default settings?</string>
    <string name="no_value">none</string>
    <string name="blocked">Blocked</string>
    <string name="expired">Expired</string>
    <string name="title_delete_file">Delete File</string>
    <string name="alert_delete_file">Do you want to delete this file?</string>
    <string name="dir_home_name">Internal Storage</string>
    <string name="select_file_setting">Select the file</string>
    <string name="title_permission_request">Permission granted</string>
    <string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work correctly.</string>
    <string name="export_button">Export</string>
    <string name="title_security">Security Lock</string>
    <string name="check_protect">Lock configuration and prevent editing</string>
    <string name="title_extra">Other settings</string>
    <string name="check_block_root">Block root</string>
    <string name="check_show_login_start">Show login to start</string>
    <string name="check_date_valid">Set expiration date</string>
    <string name="input_note_msg">Message / note for users (optional)</string>
    <string name="alert_block_settings">Setting the lock does not guarantee 100% security</string>
    <string name="error_empty_name_file">The file name must not be empty.</string>
    <string name="minimize">Minimize</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="more">More</string>
    <string name="wait">Wait</string>
    <string name="attention">Attention</string>
    <string name="first_start_msg">This application was developed for advanced users, keep this in mind when using it.</string>
    <string name="opening_apn">Opening APN Settings</string>
    <string name="apn_settings">APN Settings</string>
    <string name="license">License</string>
    <string name="developer">Developer</string>
    <string name="code_based">Code Reference</string>
    <string name="close">Close</string>
    <string name="open_with">Open with</string>
    <string name="clear_settings">Clear Settings/Data</string>
    <string name="clear_logs">Logs Cleared</string>
    <string name="settings_ImportExport">Configuration</string>
    <string name="settings_import">Import configuration</string>
    <string name="settings_export">Export configuration</string>
    <string name="wizard_details">Some details of AGN Injector Tunnel</string>
    <string name="wizard_details_msg">The AGN Injector Tunnel is a VPN client that works through an SSH server. The app itself is useless without a configuration, so it should only be used by advanced users.</string>
    <string name="payload_details">Keywords</string>
    <string name="payload_details_msg">Currently, the following keywords are supported in the connection text: %s</string>
    <string name="error_no_supported">Function not supported on your device</string>
    <string name="error_invalid_settings">Invalid configuration</string>
    <string name="error_delete_file">Failed to delete file</string>
    <string name="error_file_config_incompatible">File not compatible</string>
    <string name="exit">Exit app</string>
    <string name="auth_username">Username</string>
    <string name="public_key">Public Key</string>
    <string name="summary_private_key">"Your slowdns server's public key"</string>
    <string name="title_name_server">Server Name</string>
    <string name="summary_name_server">The hostname of the SlowDNS server</string>
    <string name="summary_dns">The DNS IP of your SlowDNS server</string>
    <string name="title_disable_delay_ssh">Disable TCP delay</string>
    <string name="summary_disable_delay_ssh">If active there will be no delays between requests, which may improve ping or even connection speed.</string>
    <string name="pay_gen">Payload generator</string>
    <string name="proxy_off">Proxy OFF</string>
    <string name="proxy_switch">Activate Proxy</string>
    <string name="hotspot_switch">Activate Mobile Hotspot</string>
    <string name="copy_details">Copy Details</string>
</resources>